sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: identifier expected but 'true' found.
	var chgtfait : Boolean == true
                                  ^